[package]
name = "irapt"
description = "An implementation of the IRAPT pitch estimation algorithm"
version = "0.1.0"
edition = "2018"

repository = "https://github.com/voice-analyzer/irapt-rs"
license = "AGPL-3.0-only"
categories = ["multimedia::audio"]
keywords = ["audio", "pitch", "IRAPT"]

[dependencies]
itertools = { version = "0.10", default-features = false }
num = "0.4"
rustfft = "6.0"

[dev-dependencies]
csv = "1.1"
matches = "0.1"
